<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cc.anel.myapplication.MainActivity">
    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/action_settings1"
        android:icon="@drawable/ic_account"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/action_settings2"
        android:icon="@drawable/ic_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:title="@string/action_settings3"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_settings4"
        android:orderInCategory="100"
        android:title="@string/action_settings4"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/action_settings5"
        android:orderInCategory="100"
        android:title="@string/action_settings5"
        android:icon="@drawable/ic_highlight"
        app:showAsAction="ifRoom"  />
</menu>
